fixed linewrapping issue

--- a/FlashcardSite/style.css
+++ b/FlashcardSite/style.css
@@ -5,7 +5,7 @@
     background:#D3D3D3;
     
     text-align:center;
-    line-height:100px;
+    /*line-height:100px;*/
 }
 
 .flashcard {
